--- a/wtm/src/main/resources/webapp/WEB-INF/site1/M0101.html
+++ b/wtm/src/main/resources/webapp/WEB-INF/site1/M0101.html
@@ -35,10 +35,10 @@
 <script src="js/jquery.js"></script>
  -->
 <!-- Bootstrap Core JavaScript -->
-<script src="../../js/bootstrap.min.js"></script>
+<script src="../../lc-js/bootstrap.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="../../js/clean-blog.min.js"></script>
+<script src="../../lc-js/clean-blog.min.js"></script>
 </head>
 
 <body>
