--- a/wtm/src/main/resources/webapp/WEB-INF/site2/W0101.html
+++ b/wtm/src/main/resources/webapp/WEB-INF/site2/W0101.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../font-awesome/css/font-awesome.min.css" type="text/css"></link> 
     <link rel="stylesheet" href="../../assets/fancybox/jquery.fancybox.css?v=2.1.5" media="screen"></link> 
      
-    <!-- Boomerang styles -->
+    <!-- Vinay styles -->
         <link id="wpStylesheet" type="text/css" href="../../css/global-style.css" rel="stylesheet" media="screen"></link>
         
 
@@ -777,7 +777,7 @@
 <script src="../../js/jquery.hoverdir.js"></script>
 <script src="../../js/jquery.stellar.js"></script>
 
-<!-- Boomerang mobile nav - Optional  -->
+<!-- Vinay mobile nav - Optional  -->
 <script src="../../assets/responsive-mobile-nav/js/jquery.dlmenu.js"></script>
 <script src="../../assets/responsive-mobile-nav/js/jquery.dlmenu.autofill.js"></script>
 
@@ -828,7 +828,7 @@
 	});
 </script>
 
-<!-- Boomerang App JS -->
+<!-- Vinay App JS -->
 <script src="../../js/wp.app.js"></script>
 <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
